src/assets/css/styles.css
html, body {
  background-color: #1a1a1a;
  font-family: "Interstate","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Garuda,Verdana,Tahoma,sans-serif;
  height: 100%;
}
[hidden] {
  display: none !important;
}
.main.container {
  margin-top: 2em;
}
.main.menu {
  position: fixed;
  top: 0px;
  height: 46px;
  width: 100%;
  margin-top: 4em;
  border-radius: 0;
  border: none;
  z-index: 1;
}
.ui.main.menu {
  background-color: #2e2e2e;
}
.ui.footer {
  position: fixed;
  border-radius: 0;
  background-color: #2e2e2e;
  bottom: 0px;
  width: 100%;
  /*height: 70px;*/
  opacity: 0.98;
}
img.logo {
  margin-left: 10px;
  margin-top: 7px;
  height: 32px;
}
.grid img {
  max-width: 100%;
  margin-top: -100%;
}
.grid .track-tile {
  width: 100%;
  padding-top: 95%;
  background-repeat: no-repeat;
  background-size: contain;
}
.album-art {
  border: 1px solid #404040;
  margin-bottom: 5px;
}
.ui.header {
  color: #fff;
  font-family: "Interstate","Lucida Grande","Lucida Sans Unicode","Lucida Sans",Garuda,Verdana,Tahoma,sans-serif;
  text-align: center;
  margin-bottom: 30px;
}
.footer .icon {
  color: #eee;
  margin: 10px;
  transform: scale(1.3);
}
track-info .icon:hover,
visualization-control .icon:hover,
player-controls .icon:hover {
  text-shadow: 0 0 1px #999, 0 0 1px #999;
  color: #fff;
  cursor: pointer;
}
.footer .play.icon {
  transform: scale(1.8);
}
.footer .refresh.icon {
  transform: scale(1.1);
}
.footer img.album-art {
  position: relative;
  margin-top: -20px;
  top: 20px;
  width: 40px;
  height: 40px;
}
.footer .track-current-time {
  font-size: 12px;
  color: #fff;
  margin-left: 20px;
}
.overview {
  padding-left: 35px;
  padding-top: 20px;
  padding-right: 35px;
  margin-top: 39px;
  background-color: #1a1a1a;
  margin-bottom: 80px;
}
.overview .track-name a,
.overview .track-name {
  color: #fff;
  font-size: 14px;
}
.overview .track-name a.hover {
  text-decoration: underline;
}
.overview .artist-name {
  color: #aaa;
  font-size: 12px;
}
.progress-wrapper {
  margin-left: 5px;
  position: relative;
  top: 7px;
  width: 370px;
  height: 20px;
  display: inline-block;
  cursor: pointer;
}
.progress-bar-left {
  width: 225px;
  position: relative;
  height: 1px;
  top: 10px;
  background-color: #00ced1;
}
.progress-bar-right {
  top: -1px;
  left: 225px;
  position: relative;
  width: 225px;
  height: 1px;
  top: 9px;
  background-color: #aaa
}
.track-length {
  font-size: 12px;
  color: #fff;
  margin-left: 10px;
}
.volume-wrapper {
  position: relative;
  top: 0px;
  margin-top: -250px;
  width: 40px;
  margin-left: 10px;
  margin-right: 10px;
  display: inline-block;
}
.ui.basic.bottom.volume-control-wrapper {
  background: #404040;
  cursor: pointer;
  width: 40px;
/*  height: 200px;*/
  opacity: 0.98;
  box-shadow: 0 2px 4px black;
}
.volume-control-top {
  position: relative;
  left: 9px;
  top: 10px;
  width: 1px;
  height: 80px;
  background-color: #aaa
}
.volume-control-bottom {
  position: relative;
  left: 9px;
  top: 10px;
  width: 1px;
  height: 80px;
  background-color: #00ced1
}
.footer, .main.menu {
  z-index: 2;
}

.footer .current-track {
  display: inline-block;
  margin-left: 10px;
  margin-top: -5px;
  top: 5px;
  position: relative;
}
.footer .current-track .playing {
  font-size: 11px;
  color: #aaa;
}
.footer .current-track .track-info,
.footer .current-track .track-info a,
.footer .current-track .track-info a:active,
.footer .current-track .track-info a:hover {
  font-size: 11px;
  color: #fff;
}


.top-tracks-header .ui.selection.dropdown {
  opacity: 0.95;
  color: #fff;
}

.md-slider-vertical .md-slider-track {
  left: 8px !important;
}

.track-progress-bar {
  width: 450px;
  top: -8px !important;
}
.md-slider-track-fill {
  z-index: 1;
}
top-tracks .ui.selection.dropdown {
  border: 1px solid #aaa;
}
top-tracks .ui.selection.dropdown.active,
top-tracks .ui.selection.active.dropdown .menu,
top-tracks .ui.selection.dropdown .menu>.item {
  border: none;
}

track-detail .waveform md-slider {
  width: 100%;
  height: 100%;
}
track-detail .waveform .md-slider-track {
  height: 100%;
  left: 0px;
  right: 0px;
  top: 8px;
}
track-detail .waveform .md-slider-track-fill {
  height: 100%;
  background: #000;
  border-right: 1px solid #000;
  opacity: 0.5;
}
track-detail .waveform .progress-wrapper {
  width:100%;
  margin-left: 0px;
  top: 0px;
  height: 100%;
}
track-detail .waveform .md-slider-thumb {
  display: none;
}

track-detail .waveform .progress,
track-detail .waveform .progress span,
 {
  display: none;
}

track-detail .waveform .track-length,
track-detail .waveform .track-current-time {
  font-size: 14px;
  padding: 3px;
  position: absolute;
  background: #000;
  z-index: 2;
  bottom: 135px;
  z-index: 2;
  opacity: 0.8;
}
track-detail .waveform .track-length {
  margin-left: 0px;
  left: 619px;
  top: 0px;
  height: 26px;
}
equalizer .md-slider-track {
  background: #404244;
}
equalizer .md-slider-track-fill {
  background: #b0bec5;
}
equalizer md-slider {
  margin-top: 10px;
}

.equalizer {
  margin-bottom: 10px;
}

track-detail .waveform .track-current-time {
  margin-left: 0px;
  top: 0px;
  height: 25px;
  width: auto;
  padding-left: 3px;
  padding-right: 3px;
}

track-progress-container .track-comments,
track-detail .comments,
player {
  font-family: "Lucida Grande","Lucida Sans Unicode","Lucida Sans",Garuda,Verdana,Tahoma,sans-serif
}

track-progress .md-slider-thumb {
  transform: scale(.5);
}

.waveform canvas {
  position: absolute;
  top: 0px;
}

search i.search.icon {
  transform: scale(1.2);
  position: absolute;
  top: 1px;
}

